<resources>
    <string name="app_name">Rentify</string>
    <string name="loginText">Login</string>
    <string name="signupText">Signup</string>
    <string name="adminLoginText">Admin Login</string>
    <string name="userLoginText">User Login</string>
    <string name="usernameText">Username</string>
    <string name="passwordText">Password</string>
    <string name="backText">Back</string>
    <string name="selectUserType">Select User Type</string>
    <string name="lessorText">Lessor</string>
    <string name="renterText">Renter</string>
    <string name="lessorSignupText">Lessor Signup</string>
    <string name="renterSignupText">Renter Signup</string>
    <string name="FirstnameText">First name</string>
    <string name="LastnameText">Last name</string>
    <string name="emailText">Email</string>
    <string name="accountInfoText">Account Info:</string>
    <string name="welcomeText">Welcome</string>
    <string name="loggedInText">Logged in as</string>
    <string name="logoutText">Logout</string>
    <string name="categoriesText">Categories</string>
    <string name="userAccountsText">User Accounts</string>
    <string name="addText">Add</string>
    <string name="addCategoryText">Add Category</string>
    <string name="addLessorItemText">Add Item</string>
    <string name="nameText">Name</string>
    <string name="descriptionText">Description</string>
    <string name="deleteText">Delete</string>
    <string name="lessorsText">Lessors</string>
    <string name="rentersText">Renters</string>
    <string name="editText">Edit</string>
    <string name="editText2">Edit</string>
    <string name="categories">Categories</string>
    <string name="categoryName">Category Name</string>
    <string name="updateText">Update</string>
    <string name="feeText">Fee</string>
    <string name="categoryText">Category</string>
    <string name="itemNameText">Item Name</string>
    <string name="timePeriodText">Time Period</string>
    <string name="weekText">Week(s)</string>
    <string name="itemsText">Items</string>
    <string name="itemName">Item Name</string>
    <string name="feeHintText">Fee (e.g. 1.00)</string>
    <string name="timePeriodWeeksText">Time Period (Number of Weeks)</string>
    <string name="searchText">Search</string>
    <string name="Request">Request</string>
    <string name="requestsText">Requests</string>
    <string name="manageText">Manage</string>
    <string name="Requests">Requests</string>
    <string name="lessorNameText">Lessor Name</string>
    <string name="statusText">Status</string>
    <string name="searchItemsText">Search Items</string>
    <string name="renterNameText">Renter Name</string>
    <string name="acceptText">Accept</string>
    <string name="denyText">Deny</string>
    <string name="timeUnitText">Time Unit</string>
    <string-array name="time_units">
        <item>Hours</item>
        <item>Days</item>
        <item>Weeks</item>
    </string-array>

</resources>