<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <EditText
        android:id="@+id/editTextItemName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/itemNameText" />

    <EditText
        android:id="@+id/editTextFee"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_below="@id/editTextItemName"
        android:hint="@string/feeText" />

    <EditText
        android:id="@+id/editTextCategory"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_below="@id/editTextItemName"
        android:hint="@string/categoryText" />

    <EditText
        android:id="@+id/editTextTimePeriod"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_below="@id/editTextItemName"
        android:hint="@string/timePeriodText" />

    <EditText
        android:id="@+id/editTextDescription"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_below="@id/editTextItemName"
        android:hint="@string/descriptionText" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/buttonUpdateItem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:backgroundTint="#3F51B5"
            android:fontFamily="@font/netflix"
            android:padding="12dp"
            android:text="@string/updateText"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textSize="20sp" />

        <Button
            android:id="@+id/buttonDeleteItem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:backgroundTint="#3F51B5"
            android:fontFamily="@font/netflix"
            android:padding="12dp"
            android:text="@string/deleteText"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textSize="20sp" />

    </LinearLayout>


</LinearLayout>