<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ma"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_background"
    tools:context=".LessorActivity">

    <TextView
        android:id="@+id/lessorTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="75dp"
        android:fontFamily="serif"
        android:text="@string/lessorSignupText"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="@color/white"
        android:textSize="34sp"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/LessorSignupInfo"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginHorizontal="50dp"
        android:layout_marginTop="90dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="50dp">

        <EditText
            android:id="@+id/FirstnameInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="90dp"
            android:hint="@string/FirstnameText"
            android:inputType="text"
            android:textColor="#000000"
            android:textColorHint="#000000"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/LastnameInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:hint="@string/LastnameText"
            android:inputType="text"
            android:textColor="#000000"
            android:textColorHint="#000000"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/UsernameInput2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:hint="@string/usernameText"
            android:inputType="text"
            android:textColor="#000000"
            android:textColorHint="#000000"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/EmailInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:hint="@string/emailText"
            android:inputType="text"
            android:textColor="#000000"
            android:textColorHint="#000000"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/PassSignUpText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:ems="10"
            android:hint="@string/passwordText"
            android:inputType="textPassword"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            android:textSize="24sp" />

        <Button
            android:id="@+id/SignUpButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_weight="2"
            android:backgroundTint="#3F51B5"
            android:padding="12dp"
            android:text="@string/signupText"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textSize="20sp" />

        <Button
            android:id="@+id/backButton2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="125dp"
            android:layout_marginRight="110dp"
            android:layout_marginBottom="50dp"
            android:layout_weight="2"
            android:backgroundTint="#3F51B5"
            android:onClick="goBackToMain"
            android:padding="12dp"
            android:text="@string/backText"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textSize="20sp" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>